--- a/style.css
+++ b/style.css
@@ -37,14 +37,18 @@ a {
 *    Componentes
 *****************************************/
 /* Header */
+.header img {
+  max-width: 55px;
+}
 .header {
   display: flex;
   justify-content: space-between;
-  font-size: 18px;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  padding-right: 20px;
-  padding-left: 20px;
+  align-items: flex-end;
+  font-size: 20px;
+  padding-top: 25px;
+  padding-bottom: 100px;
+  padding-right: 60px;
+  padding-left: 60px;
   max-width: 100vw;
   margin: 0 auto;
 }
@@ -55,7 +59,17 @@ a {
 }
 
 .parrafo {
-  padding-top: 40px;
+  padding-top: 20px;
+}
+.logo {
+  display: flex;
+  align-items: flex-end;
+}
+
+.logo a {
+  font-size: 20px;
+  padding-bottom: 7px;
+  padding-left: 10px;
 }
 
 .quienes p {
@@ -68,64 +82,33 @@ a {
 .quienes {
   padding-left: 60px;
   padding-right: 60px;
-  padding-top: 40px;
-}
-
-@media screen and (min-width: 40em) {
-  .header {
-    padding: 2em 0;
-    font-size: 28px;
-    padding-top: 40px;
-    padding-right: 39px;
-    padding-left: 60px;
-  }
-
-  .header h1 {
-    font-size: 28px;
-  }
+  padding-top: 20px;
 }
 
 /* Nav */
 .nav {
   padding: 0;
   font-family: var(--font-family-italic);
+  padding-bottom: 7px;
 }
 
 .nav > * {
-  padding-left: 2em;
-}
-
-@media screen and (min-width: 40em) {
-  .nav {
-    padding-right: 26px;
-    font-family: var(--font-family-italic);
-  }
-
-  .nav > * {
-    padding-left: 2em;
-  }
+  padding-left: 6em;
+  padding-bottom: 7px;
 }
 
 /* Footer */
 .footer {
-  margin-top: 2em;
+  margin-top: 6em;
 }
 
 .footer p {
   /*  color: rgb(78, 78, 248); */
-  font-size: 12px;
+  font-size: 14px;
   font-family: var(--font-family-light);
-  padding-left: 20px;
+  padding-left: 60px;
 }
 
-@media screen and (min-width: 40em) {
-  .footer p {
-    font-size: 15px;
-    padding-left: 60px;
-    padding-bottom: 15px;
-    padding-top: 25px;
-  }
-}
 /* Proyectos */
 .proyectos {
   margin: auto;
@@ -140,20 +123,6 @@ a {
 
 .proyectos img:hover {
   filter: blur(0);
-}
-
-@media screen and (min-width: 40em) {
-  .proyectos {
-    padding-left: 0px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 1fr);
-    gap: 1em;
-    width: 90vw;
-  }
-  .proyectos img {
-    padding-top: 0px;
-  }
 }
 
 /* Contacto */
@@ -177,44 +146,6 @@ a {
   font-size: 13px;
   /* line-height: 1; */
   text-align: justify;
-}
-
-@media screen and (min-width: 40em) {
-  .contacto {
-    display: grid;
-    grid-template-columns: 40vw 1fr;
-    grid-template-rows: auto 1fr;
-    max-width: 100vw;
-    margin: 0 auto;
-    padding-left: 60px;
-  }
-
-  .contacto > * {
-    padding-top: 60px;
-  }
-
-  .hola {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
-
-  .experiencia {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-
-  .contactame {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    justify-self: center;
-  }
-
-  .contacto h2 {
-    font-size: 64px;
-  }
-  .contacto p {
-    font-size: 15px;
-  }
 }
 
 /* Proyecto */
@@ -304,27 +235,4 @@ button:last-child {
 .titulo {
   font-size: 32px;
   padding-bottom: 20px;
-}
-@media screen and (min-width: 40em) {
-  .contenido {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-  }
-  .contenido img {
-    max-width: 800px;
-    margin: auto;
-    padding-left: 50px;
-  }
-  .textoytitulo {
-    padding-right: 60px;
-    padding-left: 60px;
-    align-self: flex-end;
-  }
-  .titulo {
-    padding-bottom: 60px;
-    font-size: 70px;
-  }
-  .texto {
-    font-size: 15px;
-  }
 }
