--- a/style.css
+++ b/style.css
@@ -57,7 +57,11 @@ a {
   font-size: 113px;
   color: #cfd704;
 }
-
+.servicios a {
+  font-size: 170px;
+  color: #cfd704;
+  padding-left: 110px;
+}
 .parrafo {
   padding-top: 20px;
 }
@@ -65,7 +69,13 @@ a {
   display: flex;
   align-items: flex-end;
 }
-
+.tabla {
+  display: grid;
+  grid-template-columns: 1fr 7fr 1fr;
+}
+.columna3 {
+  padding-left: 120px;
+}
 .logo a {
   font-size: 20px;
   padding-bottom: 7px;
@@ -78,13 +88,19 @@ a {
   padding-left: 345px;
   padding-right: 200px;
 }
-
+.servicios p {
+  font-size: 27px;
+}
 .quienes {
   padding-left: 60px;
   padding-right: 60px;
   padding-top: 20px;
 }
-
+.servicios {
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 20px;
+}
 /* Nav */
 .nav {
   padding: 0;
