--- a/style.css
+++ b/style.css
@@ -62,8 +62,21 @@ a {
   color: #cfd704;
   padding-left: 110px;
 }
+.contactanos a {
+  font-size: 50px;
+  color: #cfd704;
+  padding-left: 60px;
+}
 .parrafo {
   padding-top: 20px;
+}
+.parrafoc {
+  padding-top: 20px;
+  padding-left: 60px;
+}
+.parrafoc p {
+  padding-top: 5px;
+  font-size: 17px;
 }
 .logo {
   display: flex;
@@ -96,11 +109,13 @@ a {
 .servicios p {
   font-size: 27px;
 }
+
 .quienes {
   padding-left: 60px;
   padding-right: 60px;
   padding-top: 20px;
 }
+
 .servicios {
   padding-left: 60px;
   padding-right: 60px;
@@ -256,4 +271,54 @@ button:last-child {
 .titulo {
   font-size: 32px;
   padding-bottom: 20px;
+}
+.contactocontenido {
+  padding-left: 60px;
+}
+.contactototal {
+  display: flex;
+  padding-top: 80px;
+}
+.contactototal a {
+  text-decoration: underline;
+  font-size: 17px;
+}
+
+.contactoinfo {
+  padding-left: 390px;
+}
+
+.subtit {
+  font-size: 25px;
+  padding-bottom: 10px;
+  padding-top: 35px;
+}
+
+input[type="text"],
+select,
+textarea {
+  width: 113%;
+  font-family: var(--font-family);
+  background-color: #000000;
+  color: var(--primary);
+  padding-bottom: 10px; /* Some padding */
+  border: none;
+  border-bottom: 1px solid #cccccc; /* Gray border */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 30px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+input[type="submit"] {
+  background-color: white;
+  color: black;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 100px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #cfd704;
 }
