--- a/stylee.css
+++ b/stylee.css
@@ -193,22 +193,6 @@ a {
   padding-left: 60px;
 }
 
-/* Proyectos */
-.proyectos {
-  margin: auto;
-  padding-left: 35px;
-}
-
-.proyectos img {
-  filter: blur(5px);
-  transition-duration: 0.2s;
-  padding-top: 25px;
-}
-
-.proyectos img:hover {
-  filter: blur(0);
-}
-
 /* Contacto */
 .contacto {
   height: 100%;
@@ -233,50 +217,6 @@ a {
 }
 
 /* Proyecto */
-.slider {
-  display: flex;
-  max-width: max-content;
-  margin: 10vh auto 0;
-}
-
-.imagenes {
-  width: 380px;
-  height: 480px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4);
-  position: relative;
-  margin: 0 auto;
-  overflow: hidden;
-  order: 2;
-}
-
-.imagen {
-  position: absolute;
-  height: 100%;
-  display: grid;
-  align-content: center;
-  justify-content: center;
-  transition: all 0.6s;
-  transform: translatex(-200%);
-}
-
-.imagen.next + .imagen {
-  transform: translatex(200%);
-}
-
-.imagen.anterior {
-  z-index: 10;
-  transform: translatex(-100%);
-}
-
-.imagen.actual {
-  z-index: 10;
-  transform: translatex(0);
-}
-
-.slide.siguiente {
-  z-index: 10;
-  transform: translatex(100%);
-}
 
 /****************************************
 *    Proyecto
@@ -418,4 +358,107 @@ details[open] .control-icon-expand {
 
 details[open] summary:hover::after {
   animation: pulse 1s ease;
+}
+
+@media screen and (min-width: 1024px) {
+  .servicios a {
+    font-size: 113px;
+    color: #cfd704;
+    padding-left: 150px;
+  }
+  .principios p {
+    font-size: 16px;
+    padding-top: 20px;
+    padding-left: 250px;
+    padding-right: 210px;
+  }
+  .contactoinfo {
+    padding-left: 330px;
+  }
+  .quienes a {
+    font-size: 70px;
+    color: #cfd704;
+  }
+
+  .gracias a {
+    font-size: 60px;
+    color: #cfd704;
+    padding-left: 150px;
+  }
+  .gracias p {
+    font-size: 16px;
+    padding-left: 38%;
+    padding-top: 20px;
+    padding-bottom: 330px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    font-size: 18px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
+    max-width: 100vw;
+    margin: 0 auto;
+  }
+  .img {
+    width: 100%;
+    padding-bottom: 50px;
+  }
+  .nav > * {
+    padding-left: 4em;
+    padding-bottom: 7px;
+  }
+  .quienes a {
+    font-size: 50px;
+    color: #cfd704;
+  }
+  .quienes {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 30px;
+  }
+  .quienes p {
+    font-size: 16px;
+    padding-top: 20px;
+    padding-left: 320px;
+    padding-right: 143px;
+  }
+  .footer p {
+    /*  color: rgb(78, 78, 248); */
+    font-size: 14px;
+    font-family: var(--font-family-light);
+    padding-left: 30px;
+  }
+  .servicios a {
+    font-size: 80px;
+    color: #cfd704;
+    padding-left: 130px;
+    padding-bottom: 60px;
+  }
+  .servicios {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 0px;
+    padding-bottom: 320px;
+  }
+  .tabla {
+    display: grid;
+    grid-template-columns: 1fr 7fr 1fr;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-width: 0.5px;
+    padding-top: 30px;
+    padding-bottom: 15px;
+  }
+  .titulos {
+    padding-top: 80px;
+    padding-bottom: 30px;
+  }
 }
