--- a/stylee.css
+++ b/stylee.css
@@ -97,14 +97,17 @@ a {
 }
 .parrafo {
   padding-top: 20px;
+  padding-right: 0px;
 }
 .parrafoc {
   padding-top: 5px;
   padding-left: 60px;
+  padding-right: 400px;
 }
 .parrafoc p {
   padding-top: 5px;
   font-size: 16px;
+  padding-right: 300px;
 }
 .logo {
   display: flex;
@@ -360,7 +363,7 @@ details[open] summary:hover::after {
   animation: pulse 1s ease;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .servicios a {
     font-size: 113px;
     color: #cfd704;
@@ -393,7 +396,7 @@ details[open] summary:hover::after {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .header {
     display: flex;
     justify-content: space-between;
@@ -460,5 +463,60 @@ details[open] summary:hover::after {
   .titulos {
     padding-top: 80px;
     padding-bottom: 30px;
+  }
+  .principios a {
+    font-size: 80px;
+    color: #cfd704;
+  }
+  .principios p {
+    font-size: 16px;
+    padding-top: 20px;
+    padding-left: 320px;
+    padding-right: 145px;
+  }
+  .principios {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 80px;
+    padding-bottom: 190px;
+  }
+  .contactanos a {
+    font-size: 50px;
+    color: #cfd704;
+    padding-left: 30px;
+  }
+  .parrafoc {
+    padding-top: 5px;
+    padding-left: 30px;
+    padding-right: 60px;
+  }
+  .contactocontenido {
+    padding-left: 30px;
+    padding-right: 300px;
+  }
+  .contactoinfo {
+    padding-left: 0px;
+    padding-right: 30px;
+  }
+  .subtit {
+    font-size: 20px;
+    padding-bottom: 10px;
+    padding-top: 35px;
+  }
+  .contactototal {
+    display: flex;
+    padding-top: 80px;
+    padding-bottom: 130px;
+  }
+  .gracias a {
+    font-size: 50px;
+    color: #cfd704;
+    padding-left: 80px;
+  }
+  .gracias p {
+    font-size: 16px;
+    padding-left: 270px;
+    padding-top: 20px;
+    padding-bottom: 650px;
   }
 }
