--- a/stylee.css
+++ b/stylee.css
@@ -520,3 +520,37 @@ details[open] summary:hover::after {
     padding-bottom: 650px;
   }
 }
+
+@media screen and (max-width: 375px) {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    font-size: 13.5px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+
+    margin: 0 auto;
+  }
+  .header a {
+    font-size: 13.5px;
+  }
+  .header img {
+    max-width: 35px;
+  }
+  .nav > * {
+    padding-left: 7px;
+    padding-bottom: 4px;
+  }
+  .nav {
+    padding: 0;
+    font-family: var(--font-family-italic);
+    padding-bottom: 4px;
+  }
+  .logo a {
+    padding-bottom: 4px;
+    padding-left: 7px;
+  }
+}
