--- a/stylee.css
+++ b/stylee.css
@@ -39,335 +39,363 @@ a {
   color: var(--primary);
   /*  font-family: var(--font-family-light); */
 }
-
-/****************************************
+@media screen and (max-width: 2100px) {
+  /****************************************
 *    Componentes
 *****************************************/
-/* Header */
-.header img {
-  max-width: 55px;
-}
+  /* Header */
+  .header img {
+    max-width: 55px;
+  }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  font-size: 20px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 60px;
-  padding-left: 60px;
-  max-width: 100vw;
-  margin: 0 auto;
-}
-.img {
-  width: 100%;
-  padding-bottom: 100px;
-}
-.tablas {
-  padding-top: 30px;
-}
-.quienes a {
-  font-size: 113px;
-  color: #cfd704;
-}
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 60px;
+    padding-left: 60px;
+    max-width: 100vw;
+    margin: 0 auto;
+  }
+  .img {
+    width: 100%;
+    padding-bottom: 100px;
+  }
+  .tablas {
+    padding-top: 30px;
+  }
+  .quienes a {
+    font-size: 113px;
+    color: #cfd704;
+  }
 
-.principios a {
-  font-size: 113px;
-  color: #cfd704;
-}
+  .principios a {
+    font-size: 113px;
+    color: #cfd704;
+  }
 
-.servicios a {
-  font-size: 113px;
-  color: #cfd704;
-  padding-left: 270px;
-}
-.gracias a {
-  font-size: 60px;
-  color: #cfd704;
-  padding-left: 290px;
-}
-.titulos {
-  padding-top: 80px;
-}
-.contactanos a {
-  font-size: 50px;
-  color: #cfd704;
-  padding-left: 60px;
-}
-.parrafo {
-  padding-top: 20px;
-  padding-right: 0px;
-}
-.parrafoc {
-  padding-top: 5px;
-  padding-left: 60px;
-  padding-right: 400px;
-}
-.parrafoc p {
-  padding-top: 5px;
-  font-size: 16px;
-  padding-right: 300px;
-}
-.logo {
-  display: flex;
-  align-items: flex-end;
-}
-.tabla {
-  display: grid;
-  grid-template-columns: 1fr 7fr 1fr;
-  border-top-style: solid;
-  border-bottom-style: solid;
-  border-width: 0.5px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-.columna3 {
-  padding-left: 120px;
-}
-.logo a {
-  font-size: 20px;
-  padding-bottom: 7px;
-  padding-left: 10px;
-}
+  .servicios a {
+    font-size: 113px;
+    color: #cfd704;
+    padding-left: 270px;
+  }
+  .gracias a {
+    font-size: 60px;
+    color: #cfd704;
+    padding-left: 290px;
+  }
+  .titulos {
+    padding-top: 80px;
+  }
+  .contactanos a {
+    font-size: 50px;
+    color: #cfd704;
+    padding-left: 60px;
+  }
+  .parrafo {
+    padding-top: 20px;
+    padding-right: 0px;
+  }
+  .parrafoc {
+    padding-top: 5px;
+    padding-left: 60px;
+    padding-right: 400px;
+  }
+  .parrafoc p {
+    padding-top: 5px;
+    font-size: 16px;
+    padding-right: 300px;
+  }
+  .logo {
+    display: flex;
+    align-items: flex-end;
+  }
+  .tabla {
+    display: grid;
+    grid-template-columns: 1fr 7fr 1fr;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-width: 0.5px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .columna3 {
+    padding-left: 120px;
+  }
+  .logo a {
+    font-size: 20px;
+    padding-bottom: 7px;
+    padding-left: 10px;
+  }
 
-.quienes p {
-  font-size: 16px;
-  padding-top: 20px;
-  padding-left: 345px;
-  padding-right: 200px;
-}
+  .quienes p {
+    font-size: 16px;
+    padding-top: 20px;
+    padding-left: 345px;
+    padding-right: 200px;
+  }
 
-.principios p {
-  font-size: 16px;
-  padding-top: 20px;
-  padding-left: 345px;
-  padding-right: 200px;
-}
-.servicios p {
-  font-size: 16px;
-}
-.gracias p {
-  font-size: 16px;
-  padding-left: 42%;
-  padding-top: 20px;
-  padding-bottom: 330px;
-}
-.quienes {
-  padding-left: 60px;
-  padding-right: 60px;
-  padding-top: 20px;
-  padding-bottom: 60px;
-}
+  .principios p {
+    font-size: 16px;
+    padding-top: 20px;
+    padding-left: 345px;
+    padding-right: 200px;
+  }
+  .servicios p {
+    font-size: 16px;
+  }
+  .gracias p {
+    font-size: 16px;
+    padding-left: 42%;
+    padding-top: 20px;
+    padding-bottom: 330px;
+  }
+  .quienes {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 60px;
+  }
 
-.principios {
-  padding-left: 60px;
-  padding-right: 60px;
-  padding-top: 80px;
-  padding-bottom: 60px;
-}
-.servicios {
-  padding-left: 60px;
-  padding-right: 60px;
-  padding-top: 20px;
-}
-/* Nav */
-.nav {
-  padding: 0;
-  font-family: var(--font-family-italic);
-  padding-bottom: 7px;
-}
+  .principios {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 80px;
+    padding-bottom: 60px;
+  }
+  .servicios {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+  }
+  /* Nav */
+  .nav {
+    padding: 0;
+    font-family: var(--font-family-italic);
+    padding-bottom: 7px;
+  }
 
-.nav > * {
-  padding-left: 6em;
-  padding-bottom: 7px;
-}
+  .nav > * {
+    padding-left: 6em;
+    padding-bottom: 7px;
+  }
 
-/* Footer */
-.footer {
-  margin-top: 4em;
-  padding-bottom: 15px;
-}
+  /* Footer */
+  .footer {
+    margin-top: 4em;
+    padding-bottom: 15px;
+  }
 
-.footer p {
-  /*  color: rgb(78, 78, 248); */
-  font-size: 14px;
-  font-family: var(--font-family-light);
-  padding-left: 60px;
-}
+  .footer p {
+    /*  color: rgb(78, 78, 248); */
+    font-size: 14px;
+    font-family: var(--font-family-light);
+    padding-left: 60px;
+  }
 
-/* Contacto */
-.contacto {
-  height: 100%;
-  max-width: 60vw;
-  padding-left: 20px;
-}
+  /* Contacto */
+  .contacto {
+    height: 100%;
+    max-width: 60vw;
+    padding-left: 20px;
+  }
 
-.contacto > * {
-  padding-top: 30px;
-}
+  .contacto > * {
+    padding-top: 30px;
+  }
 
-.contacto h2 {
-  font-family: var(--font-family);
-  font-size: 32px;
-}
+  .contacto h2 {
+    font-family: var(--font-family);
+    font-size: 32px;
+  }
 
-.contacto p {
-  font-family: var(--font-family-everett);
-  font-size: 13px;
-  /* line-height: 1; */
-  text-align: justify;
-}
+  .contacto p {
+    font-family: var(--font-family-everett);
+    font-size: 13px;
+    /* line-height: 1; */
+    text-align: justify;
+  }
 
-/* Proyecto */
+  /* Proyecto */
 
-/****************************************
+  /****************************************
 *    Proyecto
 *****************************************/
-.textoytitulo {
-  padding-top: 29px;
-  padding-left: 29px;
-  padding-right: 29px;
-  text-align: justify;
-}
-.contenido img {
-  max-width: 400px;
-  margin: auto;
-}
+  .textoytitulo {
+    padding-top: 29px;
+    padding-left: 29px;
+    padding-right: 29px;
+    text-align: justify;
+  }
+  .contenido img {
+    max-width: 400px;
+    margin: auto;
+  }
 
-.texto {
-  font-size: 13px;
-  font-family: var(--font-family-everett);
-}
-.titulo {
-  font-size: 32px;
-  padding-bottom: 20px;
-}
-.contactocontenido {
-  padding-left: 60px;
-}
-.contactototal {
-  display: flex;
-  padding-top: 80px;
-}
-.contactototal a :hover {
-  color: #cfd704;
-}
-.contactototal a {
-  text-decoration: underline;
-  font-size: 16px;
-}
+  .texto {
+    font-size: 13px;
+    font-family: var(--font-family-everett);
+  }
+  .titulo {
+    font-size: 32px;
+    padding-bottom: 20px;
+  }
+  .contactocontenido {
+    padding-left: 60px;
+  }
+  .contactototal {
+    display: flex;
+    padding-top: 80px;
+  }
+  .contactototal a :hover {
+    color: #cfd704;
+  }
+  .contactototal a {
+    text-decoration: underline;
+    font-size: 16px;
+  }
 
-.contactoinfo {
-  padding-left: 570px;
+  .contactoinfo {
+    padding-left: 570px;
+  }
+
+  .subtit {
+    font-size: 25px;
+    padding-bottom: 10px;
+    padding-top: 35px;
+  }
+
+  input[type="text"],
+  select,
+  textarea {
+    width: 170%;
+    font-family: var(--font-family);
+    background-color: #000000;
+    color: var(--primary);
+    padding-bottom: 10px; /* Some padding */
+    border: none;
+    border-bottom: 1px solid #cccccc; /* Gray border */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 30px; /* Bottom margin */
+    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
+
+  button {
+    background-color: white;
+    color: black;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 100px;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #cfd704;
+  }
+
+  details {
+    margin: 0 auto;
+    position: relative;
+    font-size: 22px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    box-sizing: border-box;
+    transition: all 0.3s;
+  }
+
+  details + details {
+    padding-top: 10px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: white;
+    border-bottom-color: white;
+  }
+
+  details p {
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 5px;
+  }
+
+  summary {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 500;
+    cursor: pointer;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  summary:focus {
+    outline: none;
+    color: #cfd704;
+  }
+
+  summary::-webkit-details-marker {
+    display: none;
+  }
+
+  .control-icon {
+    fill: #cfd704;
+    transition: 0.3s ease;
+    pointer-events: none;
+  }
+
+  .control-icon-close {
+    display: none;
+  }
+
+  details[open] .control-icon-close {
+    display: initial;
+    transition: 0.3s ease;
+  }
+
+  details[open] .control-icon-expand {
+    display: none;
+  }
+
+  details[open] summary:hover::after {
+    animation: pulse 1s ease;
+  }
 }
-
-.subtit {
-  font-size: 25px;
-  padding-bottom: 10px;
-  padding-top: 35px;
-}
-
-input[type="text"],
-select,
-textarea {
-  width: 170%;
-  font-family: var(--font-family);
-  background-color: #000000;
-  color: var(--primary);
-  padding-bottom: 10px; /* Some padding */
-  border: none;
-  border-bottom: 1px solid #cccccc; /* Gray border */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 30px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
-}
-
-button {
-  background-color: white;
-  color: black;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 100px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: #cfd704;
-}
-
-details {
-  margin: 0 auto;
-  position: relative;
-  font-size: 22px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-
-  box-sizing: border-box;
-  transition: all 0.3s;
-}
-
-details + details {
-  padding-top: 10px;
-  border-top-style: solid;
-  border-bottom-style: solid;
-  border-top-color: white;
-  border-bottom-color: white;
-}
-
-details p {
-  color: white;
-  margin-top: 10px;
-  margin-bottom: 5px;
-}
-
-summary {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: 500;
-  cursor: pointer;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-summary:focus {
-  outline: none;
-  color: #cfd704;
-}
-
-summary::-webkit-details-marker {
-  display: none;
-}
-
-.control-icon {
-  fill: #cfd704;
-  transition: 0.3s ease;
-  pointer-events: none;
-}
-
-.control-icon-close {
-  display: none;
-}
-
-details[open] .control-icon-close {
-  display: initial;
-  transition: 0.3s ease;
-}
-
-details[open] .control-icon-expand {
-  display: none;
-}
-
-details[open] summary:hover::after {
-  animation: pulse 1s ease;
-}
-
 @media screen and (max-width: 1024px) {
   .servicios a {
     font-size: 113px;
     color: #cfd704;
     padding-left: 150px;
+  }
+  .principios {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 80px;
+    padding-bottom: 530px;
+  }
+  .contactototal {
+    display: flex;
+    padding-top: 80px;
+    padding-bottom: 520px;
+  }
+  .servicios {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 630px;
+  }
+  .quienes {
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: 20px;
+    padding-bottom: 120px;
+  }
+  .parrafoc {
+    padding-top: 5px;
+    padding-left: 60px;
+    padding-right: 180px;
   }
   .principios p {
     font-size: 16px;
@@ -583,6 +611,7 @@ details[open] summary:hover::after {
     font-size: 57px;
     color: #cfd704;
     padding-left: 0px;
+    padding-right: 40px;
     padding-bottom: 60px;
   }
   .principios a {
@@ -720,7 +749,7 @@ details[open] summary:hover::after {
   .servicios a {
     font-size: 57px;
     color: #cfd704;
-    padding-left: 30px;
+    padding-left: 10px;
     padding-bottom: 60px;
   }
   .principios a {
